--- a/src/app/dominios/menu/menu.component.html
+++ b/src/app/dominios/menu/menu.component.html
@@ -37,7 +37,7 @@
         
         <a routerLink="/listadominio">Lista de Domínios</a>
         <p></p>
-        <a routerLink="/listavalor">Lista de Valores</a>
+        <a routerLink="/criavalor">Cadastrar Valor Domínio</a>
       </div>
 
     </nav>
