--- a/src/app/dominios/create-valor/create-valor.component.html
+++ b/src/app/dominios/create-valor/create-valor.component.html
@@ -8,32 +8,25 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Cadastro de Valor</h5>
         <button type="button" class="close" (click)="showModal=false" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        ...<form>
           <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            <label>Valor</label>
+            <input  class="form-control" placeholder="Digite aqui o valor" [(ngModel)]="request.nome">
           </div>
+
           <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1">
+            <label> Código</label>
+            <input class="form-control" [(ngModel)]="request.codigoGenerico">
           </div>
-          <div class="form-group form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" (click)="showModal=false" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button (click)="salvarValor()" class="btn btn-primary">Salvar</button>
       </div>
     </div>
   </div>
