post para criação de dominio

--- a/src/app/dominios/create-valor/create-valor.component.html
+++ b/src/app/dominios/create-valor/create-valor.component.html
@@ -1,6 +1,6 @@
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" (click)="showModal=true" data-toggle="modal" data-target="#exampleModal">
-  Launch demo modal
+  Novo
 </button>
 
 <!-- Modal -->
