--- a/src/app/dominios/create-dominio/create-dominio.component.html
+++ b/src/app/dominios/create-dominio/create-dominio.component.html
@@ -1,3 +1,34 @@
-<p>
-  create-dominio works!
-</p>
+<!-- Button trigger modal -->
+<div class="container">
+<button type="button" class="btn btn-primary" (click)="showModal=true" data-toggle="modal" data-target="#dominio">
+Novo Domínio
+</button>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="dominio" [ngClass]="{'show': showModal}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Cadastro de Domínio</h5>
+        <button type="button" class="close" (click)="showModal=false" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+         
+          <div class="form-group">
+          <label>Nome Físico da Tabela</label>
+            <input  class="form-control" placeholder="Digite aqui o valor" [(ngModel)]="request.nomeTabelaFisico">
+          </div>
+          <div class="form-group">
+          <label>Nome Lógico</label>
+            <input  class="form-control" placeholder="Digite aqui o valor" [(ngModel)]="request.nomeLogico">
+          </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" (click)="showModal=false" data-dismiss="modal">Close</button>
+        <button (click)="salvarDominio()" class="btn btn-primary">Salvar</button>
+      </div>
+    </div>
+  </div>
+</div>
