--- a/src/app/dominios/menu/menu.component.css
+++ b/src/app/dominios/menu/menu.component.css
@@ -26,11 +26,13 @@ a:focus {
 
 .navbar {
     padding: 15px 10px;
-    background: #fff;
+    background:  #7386D5;
     border: none;
     border-radius: 0;
     margin-bottom: 40px;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+    font-size: 1.5em;
+    color: #7386D5; 
 }
 
 .navbar-btn {
@@ -183,4 +185,6 @@ a.article:hover {
         display: none;
     }
 }
+
+
 
