--- a/src/app/dominios/create-dominio/create-dominio.component.html
+++ b/src/app/dominios/create-dominio/create-dominio.component.html
@@ -26,7 +26,7 @@ Novo Domínio
           </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" (click)="showModal=false" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-secondary" (click)="showModal=false" (click)="load()"  data-dismiss="modal">Close</button>
         <button (click)="salvarDominio()" class="btn btn-primary">Salvar</button>
       </div>
     </div>
