--- a/src/app/dominios/menu/menu.component.html
+++ b/src/app/dominios/menu/menu.component.html
@@ -36,6 +36,8 @@
       <div class="sidebar-header">
         
         <a routerLink="/listadominio">Lista de Domínios</a>
+        <br><br>
+        <a routerLink="/veiculo">Cadastro de Veículos</a>
       </div>
 
     </nav>
@@ -43,7 +45,7 @@
     <!-- Page Content  -->
     <div id="content">
 
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">Cadastro de Domínios
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">Projeto Aplicado - Cadastro de Domínios
        
       </nav>
      
