--- a/src/app/dominios/create-dominio/create-dominio.component.html
+++ b/src/app/dominios/create-dominio/create-dominio.component.html
@@ -4,6 +4,7 @@
 Novo Domínio
 </button>
 </div>
+
 <!-- Modal -->
 <div class="modal fade" id="dominio" [ngClass]="{'show': showModal}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -18,11 +19,11 @@ Novo Domínio
          
           <div class="form-group">
           <label>Nome Físico da Tabela</label>
-            <input  class="form-control" placeholder="Digite aqui o valor" [(ngModel)]="request.nomeTabelaFisico">
+            <input  class="form-control" placeholder="Preencha com o nome físico da tabela" [(ngModel)]="request.nomeTabelaFisico">
           </div>
           <div class="form-group">
           <label>Nome Lógico</label>
-            <input  class="form-control" placeholder="Digite aqui o valor" [(ngModel)]="request.nomeLogico">
+            <input  class="form-control" placeholder="Preencha com o nome lógico da tabela" [(ngModel)]="request.nomeLogico">
           </div>
       </div>
       <div class="modal-footer">
