--- a/src/app/dominios/lista-valor/lista-valor.component.html
+++ b/src/app/dominios/lista-valor/lista-valor.component.html
@@ -1,5 +1,3 @@
-<a routerLink="/listadominio">Voltar</a>
-<p></p>
 <app-create-valor></app-create-valor>
 <main role="main">
   <section class="my-4">
@@ -16,6 +14,8 @@
   
               <th class="w-10"> Código</th>
               <th class="w-100">Valor</th>
+              <th class="text-center">Editar</th>
+              <th class="text-center">Excluir</th>
               
             </tr>
           </thead>
@@ -25,6 +25,8 @@
               <td class="text-center w-25">{{valores.codigo}}</td>
 
            <td>{{valores.nome}}</td> 
+           <td class="text-center"><button type="button" class="btn btn-primary">Editar</button></td> 
+           <td class="text-center"><button type="button" class="btn btn-danger" >Excluir</button></td> 
               
              <!-- <td>{{dominio.nomeLogico}}</td> -->
 
